# auto-validator

./: .env.example  .gitignore  CLAUDE.md  Implementation plan.txt  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
auto_validator/: __init__.py  config.py  exceptions.py
auto_validator/cli/: main.py
auto_validator/cli/commands/: closer.py  discover.py  listener.py  metrics.py  projects.py  run.py
auto_validator/integrations/: base.py  dalle.py  google_docs.py  sendgrid.py  supabase_store.py  tally.py
auto_validator/llm/: anthropic_client.py  base.py  factory.py  gemini_client.py  ollama_client.py  openai_client.py  openai_compatible_client.py
auto_validator/models/: closer.py  creative.py  listener.py  metrics.py  project.py  strategist.py
auto_validator/modules/: closer.py  creative.py  listener.py  strategist.py
auto_validator/prompts/closer/: generate_plf_sequence.yaml  generate_thank_you_email.yaml
auto_validator/prompts/creative/: generate_ad_hooks.yaml  generate_landing_page.yaml  generate_quiz.yaml  generate_scaling_ads.yaml  generate_visual_prompts.yaml
auto_validator/prompts/discover/: generate_ideas.yaml
auto_validator/prompts/listener/: extract_insights.yaml  generate_report.yaml
auto_validator/prompts/strategist/: create_avatar.yaml  generate_angles.yaml  refine_niche.yaml  validate_equation.yaml
auto_validator/server/: app.py  dependencies.py
auto_validator/server/routers/: reports.py  webhooks.py
auto_validator/state/: json_store.py  manager.py
auto_validator/utils/: cvr_logic.py  markdown_export.py  output_formatter.py  prompt_loader.py
docs/: services.md
tests/: conftest.py
tests/test_integrations/: test_dry_run.py
tests/test_modules/: test_closer.py  test_creative.py  test_listener.py  test_strategist.py
tests/test_server/: test_webhooks.py
tests/test_state/: test_json_store.py
tests/test_utils/: test_cvr_logic.py  test_prompt_loader.py
